# Ensign

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  EnsignConfig.cmake.in  LICENSE  Readme.md
.github/workflows/: cmake-multi-platform.yml
cmake-modules/: FindNetCDF.cmake
cmake/Modules/FindLAPACKE/: FindLAPACKE.cmake
examples/: CMakeLists.txt  advection.cpp  advection.cu  alfven_waves.cpp  alfven_waves.cu  alfven_waves.hpp  alfven_waves_test.cpp  lhd_instability.cpp  lhd_instability.hpp  lhd_instability_test.cpp  linear_landau.cpp  linear_landau.cu  linear_landau_2d.cpp  linear_landau_2d.cu  linear_landau_2d_order.cpp  linear_landau_2d_order.cu  linear_landau_3d-local.cpp  linear_landau_3d.cpp  linear_landau_3d.cu  linear_landau_3d_ls.cpp  linear_landau_3d_ls.cu  linear_landau_3d_order.cpp  linear_landau_3d_order.cu  linear_landau_order.cpp  linear_landau_order.cu  vlasov_poisson.cpp  vlasov_poisson.cu
include/generic/: common.hpp  fft.hpp  index.hpp  index_functions.hpp  kernels.hpp  matrix.hpp  netcdf.hpp  storage.hpp  tensor.hpp  timer.hpp  tree.hpp  utility.hpp
include/lr/: coefficients.hpp  lr.hpp
plots/: el_energy_gpu_order2_1d.txt  el_energy_order1_1d.txt  el_energy_order2_1d.txt  err_energy_gpu_order2_1d.txt  err_energy_order1_1d.txt  err_energy_order2_1d.txt  err_mass_gpu_order2_1d.txt  err_mass_order1_1d.txt  err_mass_order2_1d.txt  plot_1d.m  plot_2d.m  plot_3d.m  plot_order_1d.m  plot_order_2d.m  plot_order_3d.m
src/generic/: fft.cpp  fft.cu  kernels.cu  matrix.cpp  matrix.cu  netcdf.cpp  tensor.cpp  timer.cpp  timer.cu  tree.cpp  utility.cpp  utility.cu
src/lr/: coefficients.cpp  lr.cpp
tests/: CMakeLists.txt  alfven_waves.cpp  coefficients.cpp  coefficients.cu  index.cpp  lhd_instability.cpp  lr.cpp  lr.cu  matrix.cpp  storage.cpp  storage.cu  tensor.cpp
